# ubpa-hermes

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  config.json  docker-compose.yaml  example_config.json  package-lock.json  package.json  sbom.md  tailwind.config.js
docs/: setup.md
src/: change_state.rs  check_email.rs  check_pdf.rs  close_popup.rs  dashboard.rs  home.rs  load.rs  load_config.rs  login.rs  login_admin.rs  main.rs  privacy.rs  remove_state.rs  send_email.rs  state.rs  view_status.rs  view_status_admin.rs
src/templates/: admin_dashboard.rs  admin_template.rs  home_template.rs  login_template.rs  mod.rs  privacy_template.rs  staus_template.rs  upload_template.rs
static/html/: index.html  output.css
templates/: dashboard.html  login.html  login_admin.html  main_page.html  privacy.html  status.html  upload.html
