[package]
name = "ubpa-hermes"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
askama = { version = "0.14.0", features = ["derive"] }
askama_web = { version = "0.14.6", features = ["derive", "actix-web-4"] }
serde = { version = "1.0.228" }
actix-multipart = { version = "0.7.2" }
infer = { version = "0.19.0" }
regex = { version = "1.12.2" }
tokio = { version = "1.48.0", features = ["full"] }
lettre = { version = "0.11", features = ["smtp-transport", "builder"] }
serde_json = { version = "1.0.145" }


[dependencies.uuid]
version = "1.18.1"
# Lets you generate random UUIDs
features = ["v4"]
